test: 책 추가 컨트롤러 테스트 완료

--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,10 @@ dependencies {
     testImplementation 'org.projectlombok:lombok'
     implementation 'org.mariadb.jdbc:mariadb-java-client:3.2.0' // 최신 버전으로 대체 가능
 
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
 
 
 }
